minor fixes and improvements
fixed ghost pages (i wasnt using the actual page number but just a constant value)
fixed odd numbered edition's impressum being off-center
fixed space between pages
made the pages more readable on mobile

--- a/style.css
+++ b/style.css
@@ -9,12 +9,12 @@ body {
     animation: show_down 1.5s forwards;
 }
 #paperView {
-    margin-top: 60px;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     height:100%;
+    width: calc(100vh*0.4);
     display: block;
     display: none;
 }
@@ -71,7 +71,9 @@ body {
     transform: translate(-50%, -50%);
     height: 75%;
 }
-
+#misc {
+    display: none;
+}
 ::-webkit-scrollbar {
     width: 7px;
 }
@@ -95,7 +97,7 @@ body {
 }
 
 :root {
-    --kiadas_width: 700px;
+    --kiadas_width: calc(100vh * 0.45);
     --highlight: #AED7D8;
     --accent: #146B6D;
     --darkest: #2E2D36;
